perf(measure): rounds 887-892 measured — -8.18% warm, 12/12 pairs, two batches
The arc's FIRST demonstrated warm speed-up. Six consecutive rounds landed
counted removed work and each correctly declined to claim a wall number
(~0.5-1% against a box that settles at ~1%), leaving the aggregate unmeasured.

Protocol: two BUILDS (6a4e3612 = parent of 887, abf184ee = HEAD), one JVM per
SAMPLE (round 867), WARMUP=6, sample = that process's median, two batches of
six pairs with OPPOSITE leading arms.

  A median 5,859 ms sd 2.21%    B median 5,424 ms sd 3.44%
  B wins 12/12; median paired delta -8.18%; range [-12.03%, -2.81%]
  batch 1 6/6 (-7.32%), batch 2 6/6 (-9.51%)

Both arm sds are ABOVE the ~1% quiet-box threshold and the note says so: the
effect is ~2.4x the larger sd, not the "tens of times" case, so the verdict
rests on the sign (12/12 = 1-in-4,096) replicated with the rotation reversed.

Controls: identical output on all 192 measured rebuilds (78 files / 46 errors,
digest 59d930db849399aea5e03e25fedb8e4e, zero diff) from structurally distinct
binaries (694 vs 688 classes; MapScopeStack/SetScopeStack/SpineMask only in B).

The excess over the ~3-5% of summed prices:
  * GC REFUTED on budget — ~92-98 ms/rebuild = ~1.7% on both arms, and the
    faster binary took MORE pauses (86 vs 68).
  * The fifth warm leaf profile finds the mechanism: HashMap$TreeNode was
    5.91% = 348.8 ms/rebuild at round 888 and is ZERO samples now. Rounds
    889/890 under-priced their own fix ~9x.
  * Non-additivity under a shifting denominator stays open — the excess is
    largely attributed, not yet explained.

No production code changed; suite stands at 14,324 / 0 / 3.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>